@@ -397,11 +397,13 @@ a.search_refine:hover		{border:1px solid #2d5d7b; background:linear-gradient(#50
 .search_help				{width:100%; text-align:right;}
 .search_help span			{display:inline-block; margin-right:15px; background-color:#ffd982c4; padding:5px; border-radius:4px 4px 0 0; font-size:13px; font-weight:bold; min-width:65px; text-align:center;}
 .search_help span:hover		{cursor:pointer; background-color:#ffc233c4;}
-.search_show				{text-align:right; color:#eee; padding:5px 0 10px 0; margin-top:-5px;}
-.search_show:hover			{cursor:pointer; color:#fff;}
+.search_show				{background-color:#657d8ee0; border-radius:4px; color:#eee; font-size:14px;padding:7px 0; text-align:center;}
+.search_show:hover			{background-color:#6489a4e0; cursor:pointer; color:#fff;}
 .filter_text				{padding:0; color:#ccc; font-size:13px; border-bottom:1px solid #666; margin-bottom:5px;}
 
-.search_external			{color:#fff; font-size:14px; font-weight:bold;}
+#more_filters				{padding-top:15px;}
+
+.search_external			{color:#fff; font-size:14px; font-weight:bold; display:none;}
 .search_external.search_keyword			{font-weight:normal; margin-top:-5px; margin-bottom:20px;}
 .search_external span		{font-weight:normal;}
 .search_external input		{width:895px; height:30px; margin-top:10px;}
