@@ -210,7 +210,7 @@
 
 #search_trend
 <div class="search_trend_wrap">	<!--	Trending search	-->
-  <span>Trending</span><a href="?aids=COVID-19#view=main">COVID-19</a><a href="?keyword=ebola#view=main">Ebola</a><a href="?keyword=hurricane dorian#view=main">Hurricane Dorian</a><a href="?keyword=locust#view=main">Locust</a><a href="?keyword=earthquake#view=main">Earthquake</a><a href="?keyword=tsunami#view=main">Tsunami</a><a href="?keyword=malaria#view=main">Malaria</a>
+  <span>Trending</span><a href="?aids=COVID-19#view=main">COVID-19</a><a href="?text_search=ebola#view=main">Ebola</a><a href="?text_search=hurricane dorian#view=main">Hurricane Dorian</a><a href="?text_search=locust#view=main">Locust</a><a href="?text_search=earthquake#view=main">Earthquake</a><a href="?text_search=tsunami#view=main">Tsunami</a><a href="?text_search=malaria#view=main">Malaria</a>
 </div>
 	
 <!-- SEARCH2: Toggle search intro section, hidden at load / GLOSSARY	-->
@@ -424,7 +424,7 @@
 		{search_options_year}
 	</select>
 </div>
-<div onclick="$('#more_filters').toggle();" class="search_show">More filters</div>
+<div onclick="$('#more_filters').toggle();" class="search_show">MORE FILTERS</div>
 
 <div id="more_filters" style="display:none;">
 	<div class="search_wrap">		<!-- Policy Marker	-->
