@@ -1,3 +1,9 @@
+Development Portal (2020-04-17 shi)
+==============================
+Update more filters css
+Update to text_search for trending
+
+
 Development Portal (2020-04-16 shi)
 ==============================
 Update css
